# cursor-auto-otel

./: .gitignore  CURSOR_RULE.md  DESIGN.md  HUMAN_INSTRUCTIONS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.cursor/rules/: auto-otel.mdc
.github/workflows/: ci.yml
examples/simple-pipeline/: README.md  index.ts  package-lock.json  package.json
examples/simple-pipeline-python/: main.py  requirements.txt
python/: README.md  pyproject.toml
python/cursor_auto_otel/: __init__.py  attributes.py
src/: attributes.ts  index.ts
tests/: index.test.ts
